--- a/src/output.css
+++ b/src/output.css
@@ -11,6 +11,8 @@
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-3xl: 48rem;
+    --container-4xl: 56rem;
+    --container-6xl: 72rem;
     --text-sm: 0.875rem;
     --text-sm--line-height: calc(1.25 / 0.875);
     --text-4xl: 2.25rem;
@@ -351,8 +353,14 @@
       max-width: 96rem !important;
     }
   }
-  .mt-6 {
-    margin-top: calc(var(--spacing) * 6);
+  .m-0 {
+    margin: calc(var(--spacing) * 0);
+  }
+  .m-90 {
+    margin: calc(var(--spacing) * 90);
+  }
+  .mt-5 {
+    margin-top: calc(var(--spacing) * 5);
   }
   .mt-10 {
     margin-top: calc(var(--spacing) * 10);
@@ -366,17 +374,14 @@
   .mr-10 {
     margin-right: calc(var(--spacing) * 10);
   }
+  .mb-0 {
+    margin-bottom: calc(var(--spacing) * 0);
+  }
+  .mb-1 {
+    margin-bottom: calc(var(--spacing) * 1);
+  }
   .ml-8 {
     margin-left: calc(var(--spacing) * 8);
-  }
-  .ml-10 {
-    margin-left: calc(var(--spacing) * 10);
-  }
-  .ml-14 {
-    margin-left: calc(var(--spacing) * 14);
-  }
-  .ml-20 {
-    margin-left: calc(var(--spacing) * 20);
   }
   .box-border {
     box-sizing: border-box;
@@ -486,11 +491,29 @@
   .w-1\/2 {
     width: calc(1/2 * 100%);
   }
-  .w-48 {
-    width: calc(var(--spacing) * 48);
+  .w-3xl {
+    width: var(--container-3xl);
   }
   .w-52 {
     width: calc(var(--spacing) * 52);
+  }
+  .w-54 {
+    width: calc(var(--spacing) * 54);
+  }
+  .w-56 {
+    width: calc(var(--spacing) * 56);
+  }
+  .w-60 {
+    width: calc(var(--spacing) * 60);
+  }
+  .w-500 {
+    width: calc(var(--spacing) * 500);
+  }
+  .w-1000 {
+    width: calc(var(--spacing) * 1000);
+  }
+  .w-\[600px\] {
+    width: 600px;
   }
   .w-screen {
     width: 100vw;
@@ -498,11 +521,20 @@
   .max-w-3xl {
     max-width: var(--container-3xl);
   }
+  .max-w-4xl {
+    max-width: var(--container-4xl);
+  }
+  .max-w-6xl {
+    max-width: var(--container-6xl);
+  }
   .max-w-none {
     max-width: none;
   }
   .max-w-screen {
     max-width: 100vw;
+  }
+  .min-w-fit {
+    min-width: fit-content;
   }
   .min-w-screen {
     min-width: 100vw;
